# horus_sdk

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .uncrustify.cfg  MANIFEST.in  README.md  TESTING.md  docusaurus.config.js  install.sh  package-lock.json  package.json  pyproject.toml  setup.py  sidebars.js  test_horus.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_docs_examples.py
.github/workflows/: ci.yml  docs-ci.yml  docs-pages.yml  docs.yml  release.yml
contracts/: sdk_payload_contract.md
contracts/fixtures/: camera_transport_defaults.json  camera_transport_legacy_fallback.json  camera_webrtc_fields_snapshot.json  global_occupancy_dedupe.json  go_to_point_task_defaults.json  go_to_point_task_override.json  multi_robot_global_viz_snapshot.json  queued_status_reasons.json  robot_manager_config_defaults.json  single_robot_registration_snapshot.json  teleop_control_defaults.json  teleop_control_override.json  waypoint_task_defaults.json  workspace_scale_valid.json  (+2 more)
cpp/: CMakeLists.txt  Config.cmake.in  README.md  conanfile.py  package.xml  vcpkg.json
cpp/benchmarks/: CMakeLists.txt  payload_micro.cpp  registration_scenario.cpp
cpp/examples/: CMakeLists.txt  README.md  carter_registration.cpp  drone_registration.cpp  e2e_registration_check.cpp  fake_tf_publisher.cpp  flat_robot_registration.cpp  gaussian_splat_fixture_registration.cpp  global_maps_registration.cpp  legged_registration.cpp  mesh_map_registration.cpp  occupancy_map_registration.cpp  octomap_registration.cpp  ops_registration.cpp  pointcloud_map_registration.cpp  registration_common.hpp  robot_description_compass_registration.cpp  robot_description_registration.cpp  sdk_registration_demo.cpp  semantic_perception_registration.cpp  stereo_registration.cpp  uav_sim_horus_registration.cpp  unitree_go1_registration.cpp
cpp/include/horus/: client.hpp  topics.hpp
cpp/include/horus/bridge/: robot_registry.hpp  ros2.hpp  unity_tcp.hpp
cpp/include/horus/core/: event_bus.hpp  topic_map.hpp  types.hpp
cpp/include/horus/plugins/: rosbot.hpp
cpp/include/horus/robot/: dataviz.hpp  robot.hpp  sensors.hpp  status.hpp  task.hpp  teleop.hpp
cpp/include/horus/utils/: branding.hpp  logging.hpp
cpp/src/: client.cpp  topics.cpp
cpp/src/bridge/: robot_registry.cpp  ros2.cpp  unity_tcp.cpp
cpp/src/core/: event_bus.cpp  topic_map.cpp  types.cpp
cpp/src/plugins/: rosbot.cpp
cpp/src/robot/: dataviz.cpp  robot.cpp  sensors.cpp  status.cpp  task.cpp  teleop.cpp
cpp/src/utils/: branding.cpp  logging.cpp
cpp/tests/: CMakeLists.txt  parity_tests.cpp
docs/: INSTALLER.md  gen_ref_pages.py  intro.md  mkdocs.yml  robot_body_mesh_plan.md
examples/: README.md  basic_initialization.py  carter_robot_setup.py  color_assignment_path_planning.py  color_import_test.py  demo_stereo_unity_viz.py  demo_unity_viz.py  live_robot_integration.py  quick_test.py  robot_control.py  robot_creation.py  robot_import_test.py  robot_sensors_dataviz.py  run_carter_with_registration.sh  run_example.sh  run_live_robot_integration.sh  sensor_import_test.py  setup_example_env.sh  test_unity_connection.py  unity_connection_simulator.py
horus/: __init__.py  core.py  mr_interface.py  robot.py  ros_interface.py  teleop_keys.py  utils.py
horus_ros2_ws/: README.md
horus_ros2_ws/src/horus_backend/: CMakeLists.txt  package.xml
horus_ros2_ws/src/horus_backend/config/: backend_config.yaml
horus_ros2_ws/src/horus_backend/include/horus_backend/: backend_node.hpp  plugin_manager.hpp  tcp_server.hpp
horus_ros2_ws/src/horus_backend/launch/: horus_backend.launch.py  horus_complete_backend.launch.py
horus_ros2_ws/src/horus_backend/src/: backend_node.cpp  main.cpp  plugin_manager.cpp  tcp_server.cpp
horus_ros2_ws/src/horus_interfaces/: CMakeLists.txt  package.xml
horus_ros2_ws/src/horus_interfaces/msg/: RobotCommand.msg  RobotConfig.msg  RobotState.msg  RobotStatus.msg  SensorConfig.msg  VisualizationConfig.msg
horus_ros2_ws/src/horus_interfaces/srv/: ConnectRobot.srv  ExecuteCommand.srv  RegisterRobot.srv  UnregisterRobot.srv
horus_ros2_ws/src/horus_unity_bridge/: CMakeLists.txt  README.md  package.xml
horus_ros2_ws/src/horus_unity_bridge/config/: bridge_config.yaml
horus_ros2_ws/src/horus_unity_bridge/include/horus_unity_bridge/: connection_manager.hpp  message_router.hpp  protocol_handler.hpp  service_manager.hpp  topic_manager.hpp  unity_bridge_node.hpp  webrtc_manager.hpp
horus_ros2_ws/src/horus_unity_bridge/launch/: unity_bridge.launch.py
horus_ros2_ws/src/horus_unity_bridge/src/: connection_manager.cpp  main.cpp  message_router.cpp  protocol_handler.cpp  service_manager.cpp  topic_manager.cpp  unity_bridge_node.cpp  webrtc_manager.cpp
install/: install.sh
python/: pyproject.toml  setup.py
rust/: Cargo.toml  README.md
rust/benches/: payload_micro.rs  registration_scenario.rs
rust/examples/: README.md  carter_registration.rs  drone_registration.rs  e2e_registration_check.rs  fake_tf_publisher.rs  flat_robot_registration.rs  gaussian_splat_fixture_registration.rs  global_maps_registration.rs  legged_registration.rs  mesh_map_registration.rs  occupancy_map_registration.rs  octomap_registration.rs  ops_registration.rs  pointcloud_map_registration.rs  robot_description_compass_registration.rs  robot_description_registration.rs  sdk_registration_demo.rs  semantic_perception_registration.rs  stereo_registration.rs  uav_sim_horus_registration.rs  unitree_go1_registration.rs
rust/examples/common/: mod.rs
rust/src/: bridge.rs  client.rs  color.rs  dataviz.rs  lib.rs  robot.rs  sensors.rs
rust/src/core/: event_bus.rs  mod.rs  topic_map.rs  types.rs
rust/src/utils/: backend_manager.rs  branding.rs  cli.rs  mod.rs  requirements_checker.rs  rosout_monitor.rs  spinner.rs  topic_monitor.rs  topic_status.rs  unity_monitor.rs
rust/tests/: camera_transport_profiles.rs  global_visualizations_payload.rs  payload_snapshots.rs  queued_status.rs  topic_status_board.rs  workspace_scale_payload.rs
(+307 files in other folders)
