<?xml version="1.0"?>
<package format="3">
  <name>horus_cpp_sdk</name>
  <version>0.1.0</version>
  <description>HORUS C++ SDK</description>
  <maintainer email="omotoye.adekoya@edu.unige.it">Omotoye S. Adekoya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

