[package]
name = "horus-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Omotoye S. Adekoya <omotoye.adekoya@edu.unige.it>", "RICE Lab <rice@dibris.unige.it>"]
description = "HORUS Mixed Reality Robot Management SDK - Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/RICE-unige/horus_sdk"
homepage = "https://github.com/RICE-unige/horus_sdk"
documentation = "https://docs.rs/horus-sdk"
readme = "README.md"
keywords = ["robotics", "mixed-reality", "ros2", "meta-quest", "visualization"]
categories = ["robotics", "science", "visualization", "asynchronous"]
exclude = [
    "examples/*",
    "tests/*",
    ".github/*",
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# ROS 2 integration (choose one based on your needs)
# r2r = "0.8"  # Alternative ROS2 client library
# rclrs = "0.3"  # Official ROS2 Rust client library

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Hashing for color generation
md5 = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "horus"
path = "src/lib.rs"

[[example]]
name = "sdk_registration_demo"
path = "examples/sdk_registration_demo.rs"
