[package]
name = "horus-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Omotoye S. Adekoya <omotoye.adekoya@edu.unige.it>", "RICE Lab <rice@dibris.unige.it>"]
description = "HORUS Mixed Reality Robot Management SDK - Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/RICE-unige/horus_sdk"
homepage = "https://github.com/RICE-unige/horus_sdk"
documentation = "https://docs.rs/horus-sdk"
readme = "README.md"
keywords = ["robotics", "mixed-reality", "ros2", "meta-quest", "visualization"]
categories = ["robotics", "science", "visualization", "asynchronous"]
exclude = [
    "examples/*",
    "tests/*",
    ".github/*",
]

[features]
default = []
ros2 = ["dep:r2r", "dep:tokio-stream"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
regex = "1.11"
chrono = { version = "0.4", features = ["clock"] }
r2r = { version = "0.9", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "horus"
path = "src/lib.rs"

[[example]]
name = "sdk_registration_demo"
path = "examples/sdk_registration_demo.rs"

[[example]]
name = "fake_tf_publisher"
path = "examples/fake_tf_publisher.rs"

[[example]]
name = "e2e_registration_check"
path = "examples/e2e_registration_check.rs"

[[bench]]
name = "payload_micro"
harness = false

[[bench]]
name = "registration_scenario"
harness = false
