<?xml version="1.0"?>
<package format="3">
  <name>horus_backend</name>
  <version>0.1.0</version>
  <description>HORUS ROS2 Backend for Mixed Reality Robot Management</description>

  <maintainer email="omotoye.adekoya@edu.unige.it">Omotoye Adekoya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>horus_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
