<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>horus_unity_bridge</name>
  <version>0.1.0</version>
  <description>High-performance C++ Unity-ROS2 bridge for HORUS MR system</description>
  
  <maintainer email="rice@dibris.unige.it">RICE Lab</maintainer>
  <license>Apache-2.0</license>
  
  <author email="omotoye.adekoya@edu.unige.it">Omotoye S. Adekoya</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
